repaired links for github pages

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand logo-name" href="#"><img src="/img/logoFF.svg" class="logo_svg" alt="">Fajny
+                <a class="navbar-brand logo-name" href="#"><img src="img/logoFF.svg" class="logo_svg" alt="">Fajny
                     Fryzjer</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
