--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
     <!-- Navigation -->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+        <div class="container-fluid ">
             <a class="navbar-brand logo-name" href="#"><img src="img/logoFF.svg" class="logo_svg" alt="">Fajny
                 Fryzjer</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -27,7 +27,7 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse"  id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -54,12 +54,11 @@
 
                 <p class="logo-name logo-name-large info-text">fajny fryzjer</p>
                 <div class="welcome-container">
-                    <p class="welcome">witamy w naszym salonie</p>
+                    <p class="welcome">zapraszamy do naszego salonu</p>
                 </div>
             </div>
-
-
         </div>
+        <div class="chevron-down"><img src="img/chevron-down.svg" class="chevron-img-down" alt=""></div>
     </section>
 
     <section class="offer"></section>
