added chevron link

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
         </div>
-        <div class="chevron-down"><img src="img/chevron-down.svg" class="chevron-img-down" alt=""></div>
+        <div class="chevron-down"><a class="chevron-link" href="#"><img src="img/chevron-down.svg" class="chevron-img-down" alt=""></a></div>
     </section>
 
     <section class="offer"></section>
