--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse"  id="navbarSupportedContent">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -57,8 +57,10 @@
                     <p class="welcome">zapraszamy do naszego salonu</p>
                 </div>
             </div>
+            <div class="chevron-down"><a class="chevron-link" href="#"><img src="img/chevron-down.svg"
+                class="chevron-img-down" alt=""></a></div>
         </div>
-        <div class="chevron-down"><a class="chevron-link" href="#"><img src="img/chevron-down.svg" class="chevron-img-down" alt=""></a></div>
+      
     </section>
 
     <section class="offer"></section>
