--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container-fluid ">
             <a class="navbar-brand logo-name" href="#"><img src="img/logoFF.svg" class="logo_svg" alt="">Fajny
                 Fryzjer</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -33,9 +33,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active "  aria-current="page" href="#home" >Home</a>
+                        <a class="nav-link active " aria-current="page" href="#home">Home</a>
                     </li>
-                    <li class="nav-item" >
+                    <li class="nav-item">
                         <a class="nav-link" href="#offer">Oferta</a>
                     </li>
 
@@ -61,9 +61,9 @@
             <div class="welcome-container">
                 <p class="welcome">zapraszamy do naszego salonu</p>
             </div>
+           
         </div>
-        <div class="chevron-down"><a class="chevron-link" href="#offer"><img src="img/chevron-down.svg"
-            class="chevron-img-down" alt=""></a></div>
+     
     </section>
 
     <section class="offer" id="offer">
@@ -75,11 +75,11 @@
                     aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                     aria-label="Slide 3"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
                     aria-label="Slide 4"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
                     aria-label="Slide 5"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"
                     aria-label="Slide 6"></button>
             </div>
             <div class="carousel-inner">
@@ -101,7 +101,8 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div class="img-container"><img src="./img/bride-4634446_1280.jpg" class="d-block w-100 top20" alt="...">
+                    <div class="img-container"><img src="./img/bride-4634446_1280.jpg" class="d-block w-100 top20"
+                            alt="...">
                     </div>
 
                     <div class="card-body bg-dark">
@@ -109,7 +110,8 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div class="img-container"><img src="./img/hairdressing-1516352_1280.jpg" class="d-block w-100 " alt="...">
+                    <div class="img-container"><img src="./img/hairdressing-1516352_1280.jpg" class="d-block w-100 "
+                            alt="...">
                     </div>
 
                     <div class="card-body bg-dark">
@@ -117,7 +119,8 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div class="img-container"><img src="./img/fashion-8254063_1280.jpg" class="d-block w-100 top20" alt="...">
+                    <div class="img-container"><img src="./img/fashion-8254063_1280.jpg" class="d-block w-100 top20"
+                            alt="...">
                     </div>
 
                     <div class="card-body bg-dark">
@@ -125,7 +128,9 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div class="img-container"><img src="./img/close-up-image-female-hairdresser-washing-bearded-men-s-hair-before-haircut-saloon.jpg" class="d-block w-100 top20" alt="...">
+                    <div class="img-container"><img
+                            src="./img/close-up-image-female-hairdresser-washing-bearded-men-s-hair-before-haircut-saloon.jpg"
+                            class="d-block w-100 top20" alt="...">
                     </div>
 
                     <div class="card-body bg-dark">
@@ -153,8 +158,9 @@
     <footer></footer>
 
 
- 
 
+    <div class="chevron-down"><a class="chevron-link" href="#offer"><img src="img/chevron-down.svg"
+        class="chevron-img-down" alt=""></a></div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
