--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <link rel="stylesheet" href="css/style.css">
     <title>Fajny Fryzjer</title>
 
@@ -18,10 +19,10 @@
 
 </head>
 
-<body>
+<body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="0" tabindex="0">
     <!-- Navigation -->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
         <div class="container-fluid ">
             <a class="navbar-brand logo-name" href="#"><img src="img/logoFF.svg" class="logo_svg" alt="">Fajny
                 Fryzjer</a>
@@ -50,8 +51,8 @@
 
 
     <!-- section info -->
-    <section class="section-info" id="home">
-        <div class="mycard card-info">
+    <section class="section-info" >
+        <div class="mycard card-info" id="home">
 
         </div>
         <div class="phone-bar-correction">
@@ -61,9 +62,9 @@
             <div class="welcome-container">
                 <p class="welcome">zapraszamy do naszego salonu</p>
             </div>
-           
+
         </div>
-     
+
     </section>
 
     <section class="offer" id="offer">
@@ -160,7 +161,7 @@
 
 
     <div class="chevron-down"><a class="chevron-link" href="#offer"><img src="img/chevron-down.svg"
-        class="chevron-img-down" alt=""></a></div>
+                class="chevron-img-down" alt=""></a></div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
