changes for small 320px resolution

--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
 
             <p class="logo-name logo-name-large info-text">fajny fryzjer</p>
             <div class="welcome-container">
-                <p class="welcome">zapraszamy do naszego salonu</p>
+                <div class="welcome">
+                    <p>zapraszamy do</p>
+                    <p>naszego salonu</p>
+                </div>
+
             </div>
 
         </div>
