carousel h optimisation, carousel img moved to bckg-img, workers description added, carousel inner headers positioning, remowed "o nas" header due to low space in 320p res

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="0" tabindex="0">
+<body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="0" tabindex="20">
     <!-- Navigation -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
@@ -92,25 +92,23 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <div class="img-container"><img src="./img/cutting-8096167_1280.jpg" class="d-block w-100"
-                            alt="..."></div>
-
+                    <div class="img-container img-1">
+                    </div>
                     <div class="card-body">
                         <h2 class="carousel-h2 card-text">strzyżenie damskie</h2>
 
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div class="img-container"><img src="./img/hair-1744959_1280.jpg" class="d-block w-100" alt="...">
+                    <div class="img-container img-2">
                     </div>
 
                     <div class="card-body bg-dark">
-                        <h2 class="carousel-h2 card-text">farbowanie</h2>
+                        <h2 class="carousel-h2 card-text">farbowanie</h>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div class="img-container"><img src="./img/bride-4634446_1280.jpg" class="d-block w-100 top20"
-                            alt="...">
+                    <div class="img-container img-3">
                     </div>
 
                     <div class="card-body bg-dark">
@@ -118,8 +116,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div class="img-container"><img src="./img/hairdressing-1516352_1280.jpg" class="d-block w-100 "
-                            alt="...">
+                    <div class="img-container img-4">
                     </div>
 
                     <div class="card-body bg-dark">
@@ -127,8 +124,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div class="img-container"><img src="./img/fashion-8254063_1280.jpg" class="d-block w-100 top20"
-                            alt="...">
+                    <div class="img-container img-5">
                     </div>
 
                     <div class="card-body bg-dark">
@@ -136,9 +132,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div class="img-container"><img
-                            src="./img/close-up-image-female-hairdresser-washing-bearded-men-s-hair-before-haircut-saloon.jpg"
-                            class="d-block w-100 top20" alt="...">
+                    <div class="img-container img-6">
                     </div>
 
                     <div class="card-body bg-dark">
@@ -165,7 +159,6 @@
     <!-- section about-us -->
 
     <section class="about-us" id="about-us">
-        <h2 class="about-us-h2">o nas</h2>
         <div id="carouselaboutus" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselaboutus" data-bs-slide-to="0" class="active"
@@ -184,6 +177,7 @@
 
                     <div class="card-body bg-dark">
                         <h3 class="carousel-h2 card-text">Ania</h3>
+                        <p>Doświadczona stylistka z wieloletnią praktyką.</p>
                     </div>
 
 
@@ -197,6 +191,7 @@
 
                     <div class="card-body bg-dark">
                         <h3 class="carousel-h2 card-text">Kasia</h3>
+                        <p>Zawsze uśmiechnięta i pełna energii.</p>
                     </div>
 
                 </div>
