--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+        <script src="https://kit.fontawesome.com/be2d0ba6ff.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Fajny Fryzjer</title>
 
@@ -19,7 +19,7 @@
 
 </head>
 
-<body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="0" tabindex="20">
+<body id="scrollArea" data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="0" tabindex="20">
     <!-- Navigation -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
@@ -42,6 +42,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#about-us">O nas</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Kontakt</a>
+                    </li>
+
 
 
                 </ul>
@@ -62,6 +66,7 @@
             <div class="logo-container-info"><img src="img/logoFF.svg" alt=""></div>
 
             <p class="logo-name logo-name-large info-text">fajny fryzjer</p>
+
             <div class="welcome-container">
                 <div class="welcome">
                     <p>zapraszamy do</p>
@@ -214,7 +219,24 @@
     </section>
 
 
-    <section class="contact" id="contact"></section>
+    <section class="contact" id="contact">
+        <h2 class="invite">Odwiedź nas<br>w Zawierciu</h2>
+        <div class="line"></div>
+        <div class="adres">
+            <ul>Adres:
+                <li>Ul Migdałowa 15</li>
+                <li>42-420 Zawiercie</li>
+            </ul>
+        </div>
+        <div class="directly">
+            <ul>Kontakt:
+                <li><i class="fa-solid fa-square-phone-flip"></i>+48 198 345 983 </li>
+                <li><i class="fa-solid fa-square-envelope"></i>fajnyfryzjer@gmail.com </li>
+                <li><i class="fa-brands fa-square-facebook"> <div class="white"></div></i><a href="https://www.facebook.com/Fajny-fryzjer-108759643838807/">facebook</a> </li>
+            </ul>
+        </div>
+
+    </section>
     <footer></footer>
 
 
@@ -222,10 +244,11 @@
     <div class="chevron-down"><a class="chevron-link" href="#offer"><img src="img/chevron-down.svg"
                 class="chevron-img-down" alt=""></a></div>
 
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
